# gncdb_shell

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  a.c  callback.c  cmake_install.cmake  gncdb_config.ini  gncdb_shell  help.txt  install_manifest.txt  main  main.c  makefile  output.csv  testdb.db  testsql.txt  测试语句
.VSCodeCounter/2025-05-07_16-35-29/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
_CPack_Packages/Linux/DEB/: gncdb-shell-1.0.1-Linux.deb
_CPack_Packages/Linux/DEB/gncdb-shell-1.0.1-Linux/: control  md5sums
_CPack_Packages/Linux/STGZ/: gncdb_shell-1.0.1-Linux.sh
gncdblib/: CMakeLists.txt
gncdblib/include/: HashMap.h  btreeCursor.h  btreecursor.h  btreepage.h  btreetable.h  calc_logical_operator.h  calc_physical_operator.h  calc_stmt.h  catalog.h  command_executor.h  comparison_simplification_rule.h  condVariable.h  condvariable.h  conjunction_simplification_rule.h  create_index_stmt.h  create_table_logical_operator.h  create_table_physical_operator.h  create_table_stmt.h  db.h  delete_logical_operator.h  delete_physical_operator.h  delete_stmt.h  desc_table_stmt.h  drop_table_executor.h  drop_table_stmt.h  exec_tuple.h  execute_stage.h  exit_stmt.h  explain_logical_operator.h  explain_stmt.h  expression.h  expression_rewriter.h  field.h  filter_stmt.h  func_test.h  gncdb.h  gncdbConstant.h  gncdbconstant.h  groupby_logical_operator.h  groupby_physical_operator.h  (+78 more)
src/: callback.c  callback.h  callback_echo_off.c  help.c  help.h  main.c  util.h  utils.c
(+1 files in other folders)
